--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,18 @@
   pointer-events: none;
 }
 
+h1{
+  text-align: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+li{
+  margin-left: 3em;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
